--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize"
+    android:paddingTop="50dp"
     android:fitsSystemWindows="true"
     >
 
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="550dp"
         android:gravity="center"
-        android:textSize="50sp"
+        android:textSize="45sp"
+        android:paddingHorizontal="30dp"
         app:layout_constraintBottom_toTopOf="@id/back"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
